# chip8-emulator

./: .gitignore  .swp  CMakeLists.txt  Makefile  README.md  chip8.pro  chip8_emulator.pro  todo_instructions
chip8_emulator/: chip8_emulator.pro
chip8_emulator/includes/: chip8_emulator.h  config.h  constants.h  cpu.h  cpu_state.h  emulatorscreen.cpp  emulatorscreen.h  keypresslineedit.h  mainwindow.h  preferencesdialog.h  utils.h
chip8_emulator/src/: chip8_emulator.cpp  cpu.cpp  keypresslineedit.cpp  main.cpp  mainwindow.cpp  preferencesdialog.cpp  utils.cpp  video.cpp
chip8_emulator_test/: add_constant_test.cpp  bcd_test.cpp  call_addr_test.cpp  chip8_emulator_test.pro  draw_sprite_test.cpp  instructions_test.cpp  move_constant_instruction_test.cpp  move_delay_timer_test.cpp  read_sequence_test.cpp  set_delay_timer_test.cpp  skip_if_equal_test.cpp  sprite_location_test.cpp
include/: .utils.h.swp  chip8_emulator.h  constants.h  cpu.h  cpu_state.h  video.h
include/instructions/: clear_screen_instruction.h  draw_sprite.h  instruction.h  instruction_map.h  load_index_register.h
includes/: chip8_emulator.h  cpu.h  emulatorscreen.cpp  emulatorscreen.h  mainwindow.h  utils.h  video.h
includes/instructions/: clear_screen_instruction.h  instruction.h
src/: .chip8.cpp.swo  .main.cpp.swo  .main.cpp.swp  .utils.cpp.swp  chip8_emulator.cpp  cpu.cpp  main.cpp  mainwindow.cpp  video.cpp
src/instructions/: draw_sprite.cpp  (+3 more)
test/: CMakeLists.txt  clear_screen_instruction_test.cpp  draw_sprite_test.cpp  load_index_register_test.cpp  move_constant_instruction_test.cpp
(+32 files in other folders)
